myservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prog-dist
spec:
  ports:
    - nodePort: 31280
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: prog-dist
  type: NodePort
