mysql-serviceNodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - nodePort: 31282
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql
  type: NodePort
