ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-projet
spec:
  ingressClassName: nginx
  rules:
    - host: prog-dist.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heart
                port:
                  number: 5000
          - path: /titre
            pathType: Prefix
            backend:
              service:
                name: titre
                port:
                  number: 5001
